--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet>
   <div class="volver" *ngIf="mostrarBotonInicio()">
-  <button routerLink="/">🏠 Volver al inicio</button>
+  <button routerLink="/">Volver al inicio</button>
 </div>
 
 <router-outlet />
