--- a/src/app/crear-encuesta/crear-encuesta.component.html
+++ b/src/app/crear-encuesta/crear-encuesta.component.html
@@ -27,18 +27,18 @@
   <p><strong>¡Encuesta creada!</strong></p>
 
   <p>
-    📩 <strong>Responder:</strong><br />
+     <strong>Responder:</strong><br />
     <code>http://localhost:4200/responder/{{ idGenerado }}</code>
     <button (click)="copiarAlPortapapeles('http://localhost:4200/responder/' + idGenerado)">
-      📋 Copiar
+       Copiar
     </button>
   </p>
 
   <p>
-    📊 <strong>Estadísticas:</strong><br />
+     <strong>Estadísticas:</strong><br />
     <code>http://localhost:4200/estadisticas/{{ idGenerado }}</code>
     <button (click)="copiarAlPortapapeles('http://localhost:4200/estadisticas/' + idGenerado)">
-      📋 Copiar
+       Copiar
     </button>
   </p>
 </div>
