--- a/src/app/bienvenida/bienvenida.component.html
+++ b/src/app/bienvenida/bienvenida.component.html
@@ -1,8 +1,8 @@
 <div class="contenedor-bienvenida">
   <!-- Libros y lupa decorativos flotando -->
-  <img src="assets/book1.png" alt="Libro 1" class="decoracion flotante book1" />
-  <img src="assets/book2.png" alt="Libro 2" class="decoracion flotante book2" />
-  <img src="assets/lupa.png" alt="Lupa" class="decoracion flotante lupa" />
+  <img src="src/assets/book1" alt="Libro 1" class="decoracion flotante book1" />
+  <img src="src/assets/book2" alt="Libro 2" class="decoracion flotante book2" />
+  <img src="src/assets/lupa" alt="Lupa" class="decoracion flotante lupa" />
 
   <!-- Imagen principal de estudiantes -->
   <img src="assets/students.png" alt="Estudiantes" class="estudiantes" />
