--- a/src/app/bienvenida/bienvenida.component.html
+++ b/src/app/bienvenida/bienvenida.component.html
@@ -1,11 +1,11 @@
 <div class="contenedor-bienvenida">
   <!-- Libros y lupa decorativos flotando -->
-  <img src="src/assets/book1" alt="Libro 1" class="decoracion flotante book1" />
-  <img src="src/assets/book2" alt="Libro 2" class="decoracion flotante book2" />
-  <img src="src/assets/lupa" alt="Lupa" class="decoracion flotante lupa" />
+  <img src="https://github.com/barbaramartinezavalos/Trabajo-Integrador-DAW/blob/f4570d5c0338aa3c16fa43a21b2729bbbd5c5dc4/src/assets/book1.png" alt="Libro 1" class="decoracion flotante book1" />
+  <img src="https://github.com/barbaramartinezavalos/Trabajo-Integrador-DAW/blob/f4570d5c0338aa3c16fa43a21b2729bbbd5c5dc4/src/assets/book2.png" alt="Libro 2" class="decoracion flotante book2" />
+  <img src="https://github.com/barbaramartinezavalos/Trabajo-Integrador-DAW/blob/f4570d5c0338aa3c16fa43a21b2729bbbd5c5dc4/src/assets/lupa.png" alt="Lupa" class="decoracion flotante lupa" />
 
   <!-- Imagen principal de estudiantes -->
-  <img src="assets/students.png" alt="Estudiantes" class="estudiantes" />
+  <img src="https://github.com/barbaramartinezavalos/Trabajo-Integrador-DAW/blob/f4570d5c0338aa3c16fa43a21b2729bbbd5c5dc4/src/assets/students.png" alt="Estudiantes" class="estudiantes" />
 
   <!-- Texto central -->
   <div class="texto-bienvenida animado">
